finished booking, added dashboard & therapist page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,19 @@
 <body style="background-color: #FEFBF3;">
   <%- include('./includes/navbar.ejs') %>
 
-  
       <%- include("./partials/errorMessages.ejs") %>
+
+
+      <div style=" margin-top: 40px">
+        <%- include("./partials/errorMessages.ejs") %>
+    
+        <div class="container" style="display: flex; justify-content: center;; gap: 20px;">
+            
+          <div class="card" style="width: 200px; height: 200px; background-color: aqua;">Card</div>
+          <img src="http://placekitten.com/g/500/300" alt="banner" />
+        </div>
+        
+      </div>
 
       
 </body>
