--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,22 +2,45 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 
-<body style="background-color: #FEFBF3; padding-top: 35px; margin: 0%;">
+<body style="background-color: #FEFBF3;">
 
   <%- include('./includes/navbar.ejs') %>
+  <main style="margin-top: 100px;">
+    <% if(sessions.booking.length > 0) { %>
 
-
-
-  <div style=" margin-top: 40px">
-    <%- include("./partials/errorMessages.ejs") %>
-
-    <div class="container" style="display: flex; justify-content: center;; gap: 20px;">
-        
-      <div class="card" style="width: 200px; height: 200px; background-color: aqua;">Card</div>
-      <img src="http://placekitten.com/g/500/300" alt="banner" />
+      <% for (let session of sessions.booking) { %>
+          <div class="container">
+            <div class="row" >
+              <div class="col-lg-12">
+                <div class="card border-0 mb-4 mt-4" style="background-color: #F8F0DF; border-radius:10px; box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.26);">
+                  <div class="d-flex";>
+                      <div class="flex-fill">
+                        <div class="card-body">
+                          <div class="font-weight-bold">Date: <%= moment(session.dateAndTime).utc().format('YYYY-MM-DD HH:mm A') %> </div>
+                          <div class="mb-3">Duration: <%= session.duration %></div>
+                          <% if(user.role === 'customer') { %>
+                          <div class="" id="therapistName">Therapist: <%= session.therapistName %></div>
+                          <% } else if(user.role === 'therapist') { %>
+                          <div class="" id="therapistName">Patient: <%= session.customerName %></div>
+                          <% } %>
+                        </div>
+                      </div>
+                      <div class="d-flex justify-content-center align-items-center">
+                        <button class="btn btn-primary" style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm; margin-right: 10px;">Join</button>
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
     </div>
-    
-  </div>
+    <% } %>
+    <% } else { %>
+      <h1> No Sessions.</h1>
+      <% } %>
+  </main>
+  
+  
+  
       
 </body>
 </html>
