--- a/views/applications.ejs
+++ b/views/applications.ejs
@@ -20,7 +20,10 @@
                     <p style="margin: 15px;"></p>
                 <div class="buttons text-center" style="display: inline-block;">
 
-                    <button style="margin-bottom: 30px;">View CV</button>
+                    <form action="/application/<%=singleUser._id%>" method="GET" style="margin-bottom: 10px;">
+                        <button style="margin-bottom: 30px;">View CV</button>
+                        <input type="hidden" name="viewCV">
+                    </form>
 
                     <form action="/accept-application" method="POST" style="margin-bottom: 10px;">
                         <button type="submit" style="background-color: #C1E1C1;">Accept</button>
