--- a/views/join-us.ejs
+++ b/views/join-us.ejs
@@ -30,7 +30,7 @@
       <div class="card card-body" style="background-color: #FEFBF3; border: 0cm; box-shadow: 0 0 0 0"">
         <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Thank You for Offering Mosa3da!</h1>
         <%- include("./partials/errorMessages.ejs") %>
-        <form action="join-us" method="POST">
+        <form action="join-us" method="POST" enctype="multipart/form-data">
           <div class="form-group" style="padding: 1em;">
             <input style=" border-radius:10px;"
               type="name"
@@ -49,6 +49,15 @@
               class="form-control"
               placeholder="Email"
               value="<%= typeof email != 'undefined' ? email : '' %>"
+            />
+          </div>
+          <div class="form-group" style="padding: 1em; text-align: center;">
+            <label for="cv" class="text-center">CV:</label>
+            <input style=" border-radius:10px;"
+              type="file"
+              id="cv"
+              name="cv"
+              class="form-control"
             />
           </div>
 
