messages now stored in DB

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -10,6 +10,7 @@
     <div class="chat-container" style="height: 1000px;">
       <header class="chat-header" style="text-align: center;">
         <h2 id="otherSideName">Mosa3da Messages</h2>
+        <div id="feedback"></div>
         <a href="/" class="btn">Leave Room</a>
       </header>
       <main class="chat-main" style="height: 500px;">
@@ -18,8 +19,8 @@
           <ul id="users">
           </ul>
         </div>
-        <div class="chat-messages">
-        </div>
+          <div class="chat-messages">
+          </div>
       </main>
       <div class="chat-form-container">
         <form id="chat-form">
