--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -60,7 +60,7 @@
         <form action="/add-new-session", method="POST" style="margin-top: 75px;">
             <h4 class="text-center" style="margin-bottom: 25px;">Add New Session</h4>
             <div class="text-center" style="max-width: 25%; text-align: center; margin: auto;">
-                <input type="datetime-local" placeholder="Select Time and Date" id="sessionTime" name="sessionTime" >
+                <input type="datetime-local" placeholder="Select Time and Date" id="sessionTime" name="sessionTime" style="display: block;">
                 <select name="duration" class="form-select" style="margin-top: 10px;">
                     <option selected>Session Duration (In Minutes)</option>
                     <option id="duration" value="15 Minutes" name="duration">15</option>
