--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -50,9 +50,12 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"><%= user.name %></a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/account">Account</a></li>
+              <li><a class="dropdown-item text-center" href="/account">Account</a></li>
+              <%if (user.role === 'therapist') { %>
+              <li><a class="dropdown-item text-center" href="/account">Add and View Session</a></li>
+              <% } %>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="/logout">Log out</a></li>
+              <li><a class="dropdown-item text-center" href="/logout">Log out</a></li>
             </ul>
           </li>
           <li class="nav-item">
