testing save changes button on edit account

--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -48,7 +48,8 @@
                          <div class="text-center">
                               <button type="submit" class="btn btn-primary btn-block"
                                    style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm;">Change
-                                   Password</button>
+                                   Password
+                              </button>
                          </div>
                     </form>
                </div>
