slight ui changes

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -7,18 +7,13 @@
     <%- include('./includes/navbar.ejs') %>
     <main style="margin-top: 100px">
 
-    <div class="chat-container" style="height: 1000px;">
+    <div class="chat-container">
       <header class="chat-header" style="text-align: center;">
         <h2 id="otherSideName">Mosa3da Messages</h2>
-        <div id="feedback"></div>
+        <div id="feedback" style="text-align: left;"></div>
         <a href="/" class="btn">Leave Room</a>
       </header>
       <main class="chat-main" style="height: 500px;">
-        <div class="chat-sidebar" style="background-color: #79B4B7;">
-          <h3><i class="fas fa-users"></i> Users</h3>
-          <ul id="users">
-          </ul>
-        </div>
           <div class="chat-messages">
           </div>
       </main>
