--- a/views/join-us.ejs
+++ b/views/join-us.ejs
@@ -29,7 +29,9 @@
     <div class="col-md-6 m-auto">
       <div class="card card-body" style="background-color: #FEFBF3; border: 0cm; box-shadow: 0 0 0 0"">
         <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Thank You for Offering Mosa3da!</h1>
-        <%- include("./partials/errorMessages.ejs") %>
+        <div style="text-align: center;">
+          <%- include("./partials/errorMessages.ejs") %>
+        </div>
         <form action="join-us" method="POST" enctype="multipart/form-data">
           <div class="form-group" style="padding: 1em;">
             <input style=" border-radius:10px;"
