--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -6,12 +6,11 @@
 <body>
     <%- include('./includes/navbar.ejs') %>
 
-
-    <%- include("./partials/errorMessages.ejs") %>
-
-
-    <div class="page-content page-container" id="page-content" style="margin-top: 100px; ">
+    <div class="page-content page-container" id="page-content" style="margin-top: 75px; ">
         <div class="padding">
+            <div style="text-align: center;">
+                <%- include("./partials/errorMessages.ejs") %>
+            </div>
             <h4 class="text-center" style="margin-bottom: 25px;">Profile</h4>
             <div class="row container d-flex justify-content-center">
                 <div class="col-xl-12 col-md-12">
