--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -62,7 +62,8 @@ a {
 
 .chat-main {
 	display: grid;
-	grid-template-columns: 1fr 3fr;
+	grid-template-columns:auto;
+	background-color: white;
 }
 
 .chat-sidebar {
@@ -85,6 +86,16 @@ a {
 
 .chat-sidebar ul li {
 	padding: 10px 0;
+	color: black;
+}
+
+.chat-sidebar li {
+	padding: 10px 0;
+	color: black;
+	background-color: #F8F0DF;
+	border-radius: 5px;
+	padding-block: 10px;
+	margin-top: 10px;
 }
 
 .chat-messages {
