--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -3,35 +3,13 @@
 </head>
 
 <body style="background-color: #FEFBF3;">
-     <div class="navbar navbar-expand-lg fixed-top navbar-light"
-          style="background-color: #FEFBF3; box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);">
-          <div class="container">
-               <a href="/"> <img src="https://i.imgur.com/8u8uTcl.png" class="logo-image" alt="logo"
-                         class="img-fluid"></a>
-               <a href="../" class="navbar-brand">Mosa3da</a>
-               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse" id="navbarResponsive">
-
-                    <ul class="navbar-nav ms-md-auto">
-                         <li class="nav-item">
-                              <a target="_blank" rel="noopener" class="nav-link"
-                                   href="https://github.com/thomaspark/bootswatch/"><i class="fa fa-globe"
-                                        aria-hidden="true"></i> العربية</a>
-                         </li>
-                    </ul>
-               </div>
-          </div>
-     </div>
-     
-     <div style="margin-top: 65px">
-          <%- include("./partials/errorMessages.ejs") %>
-     </div>
+     <%- include('./includes/navbar.ejs') %>
      
      
      <div class="row mt-5" style="padding-top: 5em;">
+          <div style="text-align: center;">
+               <%- include("./partials/errorMessages.ejs") %>
+           </div>
           <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Change Password</h1>
           <div class="form-group" style="padding: 1em;">
                <div class="col-md-6 m-auto">
@@ -43,7 +21,7 @@
                               id="newPassword" placeholder="New Password" />
                          <br>
                          <input style=" border-radius:10px;" type="password" name="confirmPassword" class="form-control"
-                              id="confirmPassword" placeholder="Confirm Password" />
+                              id="confirmPassword" placeholder="Confirm New Password" />
                          <br>
                          <div class="text-center">
                               <button type="submit" class="btn btn-primary btn-block"
