--- a/views/forgot-password.ejs
+++ b/views/forgot-password.ejs
@@ -26,8 +26,13 @@
           </div>
      </div>
 
+
      <div class="row mt-5" style="padding-top: 5em;">
-          <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Forgot Password</h1>
+          <div style="text-align: center;">
+               <%- include("./partials/errorMessages.ejs") %>
+           </div>
+          <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Reset Password</h1>
+          <h1 class="lead text-center" style="color: black;">Please enter your email to continue</h1>
           <div class="form-group" style="padding: 1em;">
                <div class="col-md-6 m-auto">
                     <form action="" method="post">
