--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     <div class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #FEFBF3; box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);">
         <div class="container">
           <a href="/"> <img src="https://i.imgur.com/8u8uTcl.png" class="logo-image" alt="logo" class="img-fluid"></a>
-          <a href="../" class="navbar-brand">Mosa3da</a>
+          <a href="/" class="navbar-brand">Mosa3da</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -29,7 +29,9 @@
       <div class="card card-body" style="background-color: #FEFBF3; border: 0cm; box-shadow: 0 0 0 0">
         <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Sign in to your Account</h1>
         <h1 class="lead text-center" style="color: black;">Nice to see you again!</h1>
-        <%- include("./partials/errorMessages.ejs") %>
+        <div style="text-align: center;">
+          <%- include("./partials/errorMessages.ejs") %>
+        </div>
         <form action="/login" method="POST">
           <div class="form-group" style="padding: 1em;">
             <input style=" border-radius:10px;"
