--- a/views/partials/errorMessages.ejs
+++ b/views/partials/errorMessages.ejs
@@ -1,6 +1,6 @@
 <% if(typeof errors != 'undefined') { %>
     <% errors.forEach(function(error) { %>
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <div class="alert alert-warning alert-dismissible fade show" style="width: 500px; display:inline-block;" role="alert">
             <%= error.msg %>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
@@ -9,7 +9,7 @@
 
 
 <% if(success_msg != '') { %>
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <div class="alert alert-success alert-dismissible fade show" style="width: 500px; display:inline-block;" role="alert">
         <%= success_msg %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
@@ -17,7 +17,7 @@
 
 
 <% if(err_msg != '') { %>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <div class=" text-center alert alert-warning alert-dismissible fade show" style="width: 500px; display:inline-block;" role="alert">
         <%= err_msg %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
@@ -25,7 +25,7 @@
 
 
 <% if(error != '') { %>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <div class="alert alert-warning alert-dismissible fade show" style="width: 500px; display:inline-block;" role="alert">
         <%= error %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
