--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -8,7 +8,7 @@
           <div class="container">
                <a href="/"> <img src="https://i.imgur.com/8u8uTcl.png" class="logo-image" alt="logo"
                          class="img-fluid"></a>
-               <a href="../" class="navbar-brand">Mosa3da</a>
+               <a href="/" class="navbar-brand">Mosa3da</a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,25 +25,22 @@
                </div>
           </div>
      </div>
-     
-
-     
-
-     <div style="margin-top: 65px">
-          <%- include("./partials/errorMessages.ejs") %>
-     </div>
 
      
      <div class="row mt-5" style="padding-top: 5em;">
-          <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Forgot Password</h1>
+          <div style="text-align: center;">
+               <%- include("./partials/errorMessages.ejs") %>
+           </div>
+          <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Set New Password</h1>
+          <h1 class="lead text-center" style="color: black;">Please set your new password</h1>
           <div class="form-group" style="padding: 1em;">
                <div class="col-md-6 m-auto">
                     <form action="" method="post">
                          <input style=" border-radius:10px;" type="password" name="password" class="form-control"
-                              id="password" placeholder="password" />
+                              id="password" placeholder="New Password" />
                          <br>
                          <input style=" border-radius:10px;" type="password" name="confirmPassword" class="form-control"
-                              id="confirmPassword" placeholder="confirm password" />
+                              id="confirmPassword" placeholder="Confirm New Password" />
                          <br>
                          <div class="text-center">
                               <button type="submit" class="btn btn-primary btn-block"
