slight security edits

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,104 @@
 <%- include('./includes/head.ejs') %>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/homepage.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 </head>
-<body style="background-color: #FEFBF3;">
+<body>
   <%- include('./includes/navbar.ejs') %>
+  
 
-      <div style=" margin-top: 40px">
-        <div class="container" style="display: flex; justify-content: center;; gap: 20px;">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 m-auto">
+          <div id="main-card" class="card card-body position-absolute top-0 start-0" style="border: 0cm; box-shadow: 0 0 0 0">
+            <div class="inner-card">
+               
+              <img src="/images/logo-icon.png" alt="logo" class="logo-img inner-card-element">
+             
+              <h2 class="inner-card-element">Your Inner Peace Is a Click Away.</h2>              
+             
+              <button class="btn btn-primary btn-block get-started-btn inner-card-element" style="background-color: #79B4B7; border-color: #79B4B7;">
+                <a href="/signup" style="text-decoration: none; color: white;">Get Started</a>
+              </button>    
+  
+              <p class="inner-card-p">Click Get Started to sign up and start your healing journey.</p>
+              
+            </div>
             
-          <div class="card" style="width: 200px; height: 200px; background-color: aqua;">Card</div>
-          <img src="http://placekitten.com/g/500/300" alt="banner" />
+          </div>
         </div>
-        
       </div>
+
+      <!-- Nav Bar -->
+
+      
+
+      <!-- Title -->
+
+      <!-- <div class="row">
+
+        <div class="col-lg-6 m-auto">
+
+          <div class="main-card">
+            <div class="inner-card">
+             
+              <img src="/images/logo-icon.png" alt="logo" class="logo-img inner-card-element">
+             
+              <h2 class="inner-card-element">Your Inner Peace Is a Click Away.</h2>              
+             
+              <button class="btn btn-primary btn-block get-started-btn inner-card-element" style="background-color: #79B4B7; border-color: #79B4B7;">
+                <a href="/signup" style="text-decoration: none; color: white;">Get Started</a>
+              </button>    
+
+              <p class="inner-card-p">Click Get Started to sign up and start your healing journey.</p>
+              
+            </div>
+          </div>
+
+        </div>
+
+        <div class="col-lg-6">
+          <img class="main-img"src="/images/main-image.jpg" alt="banner" />
+        </div>
+
+      </div> -->
+
+    </div>
+
+    <!-- <div class="row">
+      <div class="col-md-6 m-auto">
+        <div id="main-card" class="card card-body main-card" style="border: 0cm; box-shadow: 0 0 0 0">
+          <div class="inner-card">
+             
+            <img src="/images/logo-icon.png" alt="logo" class="logo-img inner-card-element">
+           
+            <h2 class="inner-card-element">Your Inner Peace Is a Click Away.</h2>              
+           
+            <button class="btn btn-primary btn-block get-started-btn inner-card-element" style="background-color: #79B4B7; border-color: #79B4B7;">
+              <a href="/signup" style="text-decoration: none; color: white;">Get Started</a>
+            </button>    
+
+            <p class="inner-card-p">Click Get Started to sign up and start your healing journey.</p>
+            
+          </div>
+          
+        </div>
+      </div>
+    </div> -->
+
+  
+
+  <h1>Test</h1>
+  <!-- <footer class="white-section" id="footer">
+    <div class="container-fluid">
+      <i class="social-icon fab fa-facebook-f"></i>
+      <i class="social-icon fab fa-twitter"></i>
+      <i class="social-icon fab fa-instagram"></i>
+      <i class="social-icon fas fa-envelope"></i>
+      <p>© Copyright 2022 Mosa3da</p>
+    </div>
+  </footer> -->
+      
 
       
 </body>
