--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -20,9 +20,9 @@
           <li class="nav-item">
             <a class="nav-link <%= pageName === 'therapist list' ? 'active' : '' %>" href="/therapists">Therapist List</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link <%= pageName === 'tests' ? 'active' : '' %>" href="/">Tests</a>
-          </li>
+          </li> -->
         </ul>
         <% } else if (user.role === 'therapist') { %>
           <ul class="navbar-nav">
