--- a/views/user-profile-edit.ejs
+++ b/views/user-profile-edit.ejs
@@ -19,7 +19,11 @@
                         <div class="row m-l-0 m-r-0">
                             <div class="col-sm-4 user-profile" style="background-color: #79B4B7;">
                                 <div class="card-block text-center text-white">
+                                  <% if(user.image == "https://i.imgur.com/fUWz80K.jpg") { %>
                                     <div class="m-b-25"> <img src="<%= user.image %>" class="img-radius" alt="User-Profile-Image" style="max-width: 50%; max-height: 50%;"> </div>
+                                <% } else { %>
+                                    <div class="m-b-25"> <img src="/<%= user.image %>" class="img-radius" alt="User-Profile-Image" style="max-width: 50%; max-height: 50%;"> </div>
+                                <% } %>
                                     <div class="form-group" style="margin-top: -15px; margin-bottom: 25px;">
                                       <input style=" border-radius:10px; text-align: center;;"
                                         type="file"
