--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
 
             <ul class="navbar-nav ms-md-auto">
               <li class="nav-item">
-                <a target="_blank" rel="noopener" class="nav-link" href="https://github.com/thomaspark/bootswatch/"><i class="fa fa-globe" aria-hidden="true"></i> العربية</a>
+                <a class="nav-link" href="/signup">Sign Up</a>
               </li>
             </ul>
           </div>
