--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,9 +16,9 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
 
             <ul class="navbar-nav ms-md-auto">
-              <li class="nav-item">
-                <a target="_blank" rel="noopener" class="nav-link" href="https://github.com/thomaspark/bootswatch/"><i class="fa fa-globe" aria-hidden="true"></i> العربية</a>
-              </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/login">Sign In</a>
+                </li>
             </ul>
 
           </div>
