--- a/public/css/therapist-list.css
+++ b/public/css/therapist-list.css
@@ -67,7 +67,8 @@
 .profile-card .about {
     color:#44476a;
     font-weight:400;
-    font-size:16px
+    font-size:16px;
+    margin-top:5px;
 }
 
 .profile-card .icon:hover::before,.buttons button:hover:before{
@@ -80,6 +81,10 @@
     border-radius:50%;
     background:#ecf0f3;
     box-shadow:inset 0 0 0 0 #79B4B7,inset 0 0 0 0 #79B4B7
+}
+
+.buttons{
+    margin-top: 30px;
 }
 
 .buttons button:hover:before{
