--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,4 +1,34 @@
-<!DOCTYPE html>
+<div class="container mt-5">
+     <select class="selectpicker" multiple aria-label="size 3 select example">
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="4">Four</option>
+     </select>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <script src="js/script.js"></script> -->
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -40,4 +70,4 @@
      });
 </script>
 
-</html>
+</html> -->
