--- a/views/therapist-List.ejs
+++ b/views/therapist-List.ejs
@@ -25,9 +25,12 @@
                     </div>
                 </div>
 
-                <div class="name"><%= singleUser.name %></div>
-                <div class="about"><%= singleUser.name %></div>
-                    <p style="margin: 15px;"></p>
+                <div class="name"><%= singleUser.name %></div>            
+
+                <% if(singleUser.specialties) { %>     
+                    <div class="about text-center">Specialized in: <%= singleUser.specialties %></div>
+                    <% } %> 
+                    
                 <div class="buttons text-center" style="display: inline-block;">
 
                     <form action="/therapists/<%=singleUser._id%>">
